CraftingTweaks support