@@ -5,6 +5,8 @@ import net.blay09.mods.craftingcraft.item.ModItems;
 import net.blay09.mods.craftingcraft.network.ModNetworking;
 import net.fabricmc.loader.api.FabricLoader;
 
+import java.lang.reflect.InvocationTargetException;
+
 public class CraftingCraft {
 
     public static final String MOD_ID = "craftingcraft";
@@ -16,8 +18,8 @@ public class CraftingCraft {
 
         if (FabricLoader.getInstance().isModLoaded("craftingtweaks")) {
             try {
-                Class.forName("net.blay09.mods.craftingcraft.addon.CraftingTweaksAddon").newInstance();
-            } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+                Class.forName("net.blay09.mods.craftingcraft.addon.CraftingTweaksAddon").getConstructor().newInstance();
+            } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | NoSuchMethodException | InvocationTargetException e) {
                 e.printStackTrace();
             }
         }
